@@ -4,4 +4,4 @@ Picta Downloader GUI for Debian
 The source code is licenced as MIT and you can find it on
 https://github.com/oleksis/picta-dl-gui/
 
- -- _MAINTAINER_ <_EMAIL_>  _DATE_
+ -- __MAINTAINER__ <__EMAIL__>  __DATE__
