@@ -1,1 +1,1 @@
-picta-dl-gui__VERSION_-1_amd64.deb net optional
+picta-dl-gui___VERSION__-1_amd64.deb net optional
